# AnalisadorDeDocumentos

./: AgenteResumo.py  LICENSE  README.md  bot.py  database_manager.py  integracao.py  jsonToDoc.py  positivo_ri.db  pyproject.toml  requirements.txt  screnshot.py  table.py  ultimo_trimestre.txt
bot_data/: last_check.json  last_sent.json  outros_map.json  subscribers.json
resultados_analises/: analise_2T25_20250908_2025.json  analise_3T25_20251124_0937.json  analise_3T25_20251127_1415.json
resultados_analises/documentos_analise_2T25_20250908_2025/: resumo_demonstracoes_financeiras_2T25.docx  resumo_executivo_2T25.docx  resumo_release_resultados_2T25.docx  resumo_transcricao_2T25.docx
resultados_analises/documentos_analise_3T25_20251124_0937/: resumo_demonstracoes_financeiras_3T25.docx  resumo_executivo_3T25.docx  resumo_release_resultados_3T25.docx  ~$sumo_demonstracoes_financeiras_3T25.docx
resultados_analises/documentos_analise_3T25_20251127_1415/: resumo_demonstracoes_financeiras_3T25.docx  resumo_executivo_3T25.docx  resumo_release_resultados_3T25.docx
