[project]
name = "projeto1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.7.10",
    "beautifulsoup4>=4.13.5",
    "camelot-py>=0.11.0",
    "chromadb>=1.0.20",
    "docx>=0.2.4",
    "fitz>=0.0.1.dev2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.31",
    "openai>=1.99.9",
    "pillow>=11.3.0",
    "pymysql>=1.1.1",
    "pypdf>=6.0.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.3",
    "requests>=2.32.4",
    "selenium>=4.35.0",
    "telegram>=0.0.1",
]
